# libranet-jupyter

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  justfile  makefile  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: dependabot-auto-merge.yaml  linting.yaml  testing.yaml
.just/: 01-path.just  02-dir-structure.just  03-dotenv.just  04-pip.just  05-git.just  10-black.just  11-isort.just  12-flake8.just  13-pylint.just  14-mypy.just  15-bandit.just  16-ruff.just  17-ipython.just  18-pyroma.just  19-safety.just  20-pytest.just  21-tox.just  22-nox.just  25-sphinx.just  30-pre-commit.just  47-jupyter.just  55-poetry.just  60-readthedocs.just  70-supervisord.just  75-twine.just  dotenv.just  git.just  jupyter.just  just.just  readthedocs.just  sshx.just
.make/: 02-dir-structure.mk  47-jupyter.mk  75-twine.mk
docs/: changes.md  conf.py  contributing.md  index.rst  readme.md
docs/modules/libranet_jupyter/: index.rst
docs/modules/libranet_jupyter/logging/: index.rst
etc/: jupyter_lab_config-old.py  jupyter_lab_config.py  jupyter_notebook_config.py  logging.yaml  migrated  supervisord.conf
etc/ipython/profile_default/: history.sqlite
etc/supervisord.d/: jupyter-lab.conf  jupyter-notebook.conf  jupyter.conf
scripts/: start-notebooks.sh
src/libranet_jupyter/: __init__.py  logging.py
tests/: conftest.py  test_init.py
